w2v using negative sampling

--- a/s1/exploring_word_vectors.ipynb
+++ b/s1/exploring_word_vectors.ipynb
@@ -9,9 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Import"
    ]
@@ -19,9 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# All Import Statements Defined Here\n",
@@ -36,9 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -112,18 +106,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Co-Occurrence"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "A co-occurrence matrix counts how often things co-occur in some environment. Given some word $w_i$ occurring in the document, we consider the *context window* surrounding $w_i$. Supposing our fixed window size is $n$, then this is the $n$ preceding and $n$ subsequent words in that document, i.e. words $w_{i-n} \\dots w_{i-1}$ and $w_{i+1} \\dots w_{i+n}$. We build a *co-occurrence matrix* $M$, which is a symmetric word-by-word matrix in which $M_{ij}$ is the number of times $w_j$ appears inside $w_i$'s window among all documents.\n",
     "\n",
@@ -540,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "hidden": true
    },
@@ -551,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "hidden": true
    },
@@ -640,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "hidden": true
    },
@@ -1162,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1211,7 @@
        "400000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1232,7 @@
        "['the', ',', '.', 'of', 'to']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1319,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10010, 200)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1348,7 @@
        "(10010, 2)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1606,57 +1616,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('mother', 0.717806875705719),\n",
+       " ('man', 0.7114682197570801),\n",
+       " ('queen', 0.6746002435684204),\n",
+       " ('father', 0.6699029803276062),\n",
+       " ('daughter', 0.6666619777679443),\n",
+       " ('husband', 0.6582999229431152),\n",
+       " ('wife', 0.6576738953590393),\n",
+       " ('her', 0.6521750688552856),\n",
+       " ('she', 0.649080753326416),\n",
+       " ('son', 0.6373396515846252)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wv_from_bin.most_similar(positive=['woman', 'king'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('king', 0.6220162510871887),\n",
+       " ('jeongjo', 0.5617712736129761),\n",
+       " ('seongjong', 0.5423533916473389),\n",
+       " ('vajiravudh', 0.5373874306678772),\n",
+       " ('seonjo', 0.519416093826294),\n",
+       " ('taejong', 0.5177606344223022),\n",
+       " ('injo', 0.514464259147644),\n",
+       " ('bagyidaw', 0.5124008655548096),\n",
+       " ('kalākaua', 0.5123972296714783),\n",
+       " ('alveda', 0.5079326629638672)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wv_from_bin.similar_by_vector(wv_from_bin.word_vec('king') - wv_from_bin.word_vec('man'))\n",
+    "# meaning of kingship without the manness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('king', 0.8209067583084106),\n",
+       " ('queen', 0.7119165658950806),\n",
+       " ('princess', 0.6121214628219604),\n",
+       " ('monarch', 0.6024806499481201),\n",
+       " ('prince', 0.596004068851471),\n",
+       " ('throne', 0.5915313959121704),\n",
+       " ('daughter', 0.5588055849075317),\n",
+       " ('elizabeth', 0.554740309715271),\n",
+       " ('kingdom', 0.5494517087936401),\n",
+       " ('mother', 0.5419816970825195)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wv_from_bin.similar_by_vector(wv_from_bin.word_vec('king') - wv_from_bin.word_vec('man') + wv_from_bin.word_vec('woman'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('king', 0.6874164938926697),\n",
-      " ('royal', 0.5094212293624878),\n",
-      " ('monarch', 0.5067929029464722),\n",
-      " ('ii', 0.5023354887962341),\n",
-      " ('prince', 0.49829214811325073),\n",
-      " ('crown', 0.4928525984287262),\n",
-      " ('majesty', 0.48679545521736145),\n",
-      " ('vi', 0.4793173670768738),\n",
-      " ('elizabeth', 0.47674959897994995),\n",
-      " ('reign', 0.46701541543006897)]\n"
+      "[('chinese', 0.8808660507202148),\n",
+      " ('beijing', 0.6723365783691406),\n",
+      " ('taiwanese', 0.6554437875747681),\n",
+      " ('mainland', 0.6267528533935547),\n",
+      " ('li', 0.61803138256073),\n",
+      " ('wang', 0.603748083114624),\n",
+      " ('zhu', 0.5768657326698303),\n",
+      " ('wu', 0.5707286596298218),\n",
+      " ('zhang', 0.5691275596618652),\n",
+      " ('taiwan', 0.5678080320358276)]\n"
      ]
     }
    ],
    "source": [
-    "pprint.pprint(wv_from_bin.most_similar(positive=['man', 'queen'], negative=['woman']))"
+    "pprint.pprint(wv_from_bin.most_similar(positive=['china', 'vietnamese'], negative=['vietnam']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('princess', 0.6734778881072998),\n",
-       " ('elizabeth', 0.6451511383056641),\n",
-       " ('lady', 0.5550018548965454),\n",
-       " ('duchess', 0.5548572540283203),\n",
-       " ('mary', 0.5506837964057922),\n",
-       " ('anne', 0.5504996180534363),\n",
-       " ('victoria', 0.5462644696235657),\n",
-       " ('margaret', 0.5344428420066833),\n",
-       " ('sister', 0.5291519165039062),\n",
-       " ('daughter', 0.5248432159423828)]"
+       "[('french-canadian', 0.41807258129119873),\n",
+       " ('niuean', 0.41111814975738525),\n",
+       " ('yemenite', 0.3961483836174011),\n",
+       " ('ukranian', 0.3950352072715759),\n",
+       " ('dagestani', 0.39487698674201965),\n",
+       " ('shaykhs', 0.3919771909713745),\n",
+       " ('creole', 0.3896016776561737),\n",
+       " ('vietnamese', 0.3874216675758362),\n",
+       " ('romanichal', 0.38616299629211426),\n",
+       " ('gilbertese', 0.3840707540512085)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wv_from_bin.most_similar(positive=['woman', 'queen'],negative=['man']) # not work though"
+    "wv_from_bin.similar_by_vector(wv_from_bin.word_vec('vietnamese') - wv_from_bin.word_vec('vietnam'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('chinese', 0.8953746557235718),\n",
+       " ('china', 0.7677565813064575),\n",
+       " ('beijing', 0.6976702809333801),\n",
+       " ('taiwanese', 0.6600586175918579),\n",
+       " ('mainland', 0.6446439623832703),\n",
+       " ('vietnamese', 0.6418699026107788),\n",
+       " ('li', 0.6319595575332642),\n",
+       " ('wang', 0.6148654222488403),\n",
+       " ('taiwan', 0.5951897501945496),\n",
+       " ('zhu', 0.5861659646034241)]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wv_from_bin.similar_by_vector(wv_from_bin.word_vec('vietnamese') - wv_from_bin.word_vec('vietnam')+ wv_from_bin.word_vec('china'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('champagne', 0.5522081851959229),\n",
+      " ('wine', 0.5233477354049683),\n",
+      " ('french', 0.5211446285247803),\n",
+      " ('drinks', 0.5134167671203613),\n",
+      " ('drink', 0.5113363265991211),\n",
+      " ('cognac', 0.5102250576019287),\n",
+      " ('whiskey', 0.49817317724227905),\n",
+      " ('bourbon', 0.4954427182674408),\n",
+      " ('perfume', 0.47533366084098816),\n",
+      " ('bottle', 0.4676624536514282)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint.pprint(wv_from_bin.most_similar(positive=['france', 'beer'], negative=['australia']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('beer', 0.6559044122695923),\n",
+       " ('kegs', 0.5348634719848633),\n",
+       " ('whiskey', 0.5143569707870483),\n",
+       " ('partagas', 0.48708200454711914),\n",
+       " ('swigging', 0.4845068156719208),\n",
+       " ('vodka', 0.48340117931365967),\n",
+       " ('sodas', 0.4706902503967285),\n",
+       " ('kolsch', 0.47039157152175903),\n",
+       " ('drink', 0.46139878034591675),\n",
+       " ('coolers', 0.460589736700058)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wv_from_bin.similar_by_vector(wv_from_bin.word_vec('beer') - wv_from_bin.word_vec('australia'))"
    ]
   },
   {
