more stuff, pros and cons

--- a/fastai_1_stopwords_lemm_svd_nmf.ipynb
+++ b/fastai_1_stopwords_lemm_svd_nmf.ipynb
@@ -898,9 +898,7 @@
    "source": [
     "the normal SVD spit out too many topics. In NMF you can adjust the # of topics so it will only calculate the subset of topics you are interested in.\n",
     "\n",
-    "Truncated SVD will try to achieve what NMF does: We are just interested in the vectors corresponding to the largest singular values.\n",
-    "\n",
-    "TODO: how? is this linear-algebra?"
+    "Truncated SVD will try to achieve what NMF does: We are just interested in the vectors corresponding to the largest singular values (from the diagonal matrix) so we will throw away smallest singular values, effectively throwing away rows and columns of the other 2 matrices\n"
    ]
   },
   {
