--- a/s1/exploring_word_vectors.ipynb
+++ b/s1/exploring_word_vectors.ipynb
@@ -150,24 +150,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### PROS AND CONS OF CO-OCCURENCE"
+    "### PROS, CONS AND TIPS OF CO-OCCURENCE"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Pros:\n",
     "- unlike treating words individualy like bag of words, words co-occurrence matrix is computed simply by counting how many times two words in a given window (aka context) occur together => **preserves the semantic relationship between similar words, e.g. man and woman are closer together than man and apple since they are often used in the same context => similar count regarding to their neighbor words**\n",
     "- You can also apply SVD or truncated SVD just like TF-IDF\n",
     "\n",
-    "Cons: need big memory to store the matrix (before SVD) since it's essentially a sparse matrix with size vocab x vocab"
+    "Cons: \n",
+    "- need big memory to store the matrix (before SVD) since it's essentially a **sparse matrix** with **exponential size** vocab x vocab\n",
+    "- stop words are too frequent and have more impact on syntax => solution: set max count, log scale, or filter out stop words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tips:\n",
+    "- Choose smaller windows so closer words are more significant\n",
+    "- Use pearson correlation (how???) instead of counts\n",
+    "- With careful constructed way to build co-occurence matrix, the resultd word vectors can have semantic patterns similar to w2v word vectors: can represent word analogy through linearity property, such as king-man+woman = queen"
    ]
   },
   {
@@ -517,9 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Question 1.3: Implement `reduce_to_k_dim` [code] (1 point)\n",
     "\n",
@@ -531,9 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.decomposition import TruncatedSVD"
@@ -542,9 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def reduce_to_k_dim(M, k=2):\n",
@@ -577,9 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -719,9 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Question 1.5: Co-Occurrence Plot Analysis [written] (3 points)\n",
     "\n",
@@ -739,9 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -764,9 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -786,9 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -817,9 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- The 3 countries are together\n",
     "- barrels and oil/petroleum are not\n",
@@ -828,9 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### try TFIDF and SVD/truncated SVD/NMF for word embedding"
    ]
@@ -838,9 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer"
@@ -849,9 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "temp2 = [' '.join([w.lower() for w in list(reuters.words(f))]) for f in reuters.fileids(\"crude\")]"
@@ -860,9 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tfidf = TfidfVectorizer(stop_words='english')\n",
@@ -872,9 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -893,19 +873,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### truncated SVD"
+    "#### truncated SVD"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -923,9 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -945,9 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -967,9 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "word2Ind_tfidf = {v:k for k,v in enumerate(tfidf.get_feature_names())}"
@@ -978,9 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1006,9 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Note that this is document-based embeddings. \n",
     "- Oil and petroleum are together\n",
@@ -1018,19 +984,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### NMF"
+    "#### NMF"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import decomposition"
@@ -1039,9 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "clf = decomposition.NMF(n_components=2, random_state=1)"
@@ -1050,9 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "W1 = clf.fit_transform(tf_mat)\n",
@@ -1062,9 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1084,9 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1106,9 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1134,9 +1086,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Interesting..."
    ]
@@ -1913,11 +1863,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Co-occurance vs skipgram/neural net approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Co-occurance (count-basedHannah Gill)\n",
+    "- Pros: fast training, use stats\n",
+    "- Cons: primarily to capture word similarity, some words can have large counts => disproportion in word importance\n",
+    "\n",
+    "Skipgram:\n",
+    "- Pros: improve performance (compared to co-occurance), and can capture complex patterns (not just similarity)\n",
+    "- Cons: scales with corpus size (?) and don't use much stats"
+   ]
   }
  ],
  "metadata": {
