word analogy linear relationship on vector space + Glove note

--- a/s1/exploring_word_vectors.ipynb
+++ b/s1/exploring_word_vectors.ipynb
@@ -175,7 +175,7 @@
     "Tips:\n",
     "- Choose smaller windows so closer words are more significant\n",
     "- Use pearson correlation (how???) instead of counts\n",
-    "- With careful constructed way to build co-occurence matrix, the resultd word vectors can have semantic patterns similar to w2v word vectors: can represent word analogy through linearity property, such as king-man+woman = queen"
+    "- IMPORTANT: With **careful constructed way to build co-occurence matrix, the resulted word vectors can have semantic patterns similar to w2v word vectors**: can represent word analogy through linearity property, such as king-man+woman = queen"
    ]
   },
   {
@@ -1101,6 +1101,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GLOVE: combining the ideas of co-occurence count matrix and neural network method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Main idea: ratio of 2 co-occurence probabilities can encode **linear meaning components in a word vector space**\n",
+    "\n",
+    "By setting dot products equal to log of co-occurence probability, this can happen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./imgs/Selection_028.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: left side (wa-wb) is the linear meaning (can add/subtract), right side is the (log) ratio of 2 probabilities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./imgs/Selection_029.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We try to make wiT @ w\\~j and log(Xij) similar to each other, so the difference between them will be the loss. bi and b~j are bias terms (when some words are too common and more than likely to co-occur)\n",
+    "\n",
+    "the f(Xij) function is to cap very common word pairs which can affect performance of the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -1809,6 +1855,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note: this is what these words look like on vector space. You can easily notice the linearly parallel between man/woman and king/queen or sir/madam. This is a way to evaluate your word vectors called **intrinsic evaluation**\n",
+    "\n",
+    "TODO: read more about word vector evaluation, intrinsic and extrinsic evaluation: https://youtu.be/kEMJRjEdNzM?t=3450\n",
+    "\n",
+    "\n",
+    "![](./imgs/Selection_030.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Question 2.6: Guided Analysis of Bias in Word Vectors [written] (1 point)\n",
     "\n",
     "It's important to be cognizant of the biases (gender, race, sexual orientation etc.) implicit in our word embeddings. Bias can be dangerous because it can reinforce stereotypes through applications that employ these models.\n",
@@ -1866,19 +1924,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Co-occurance vs skipgram/neural net approach"
+    "# Co-occurence vs skipgram/neural net approach"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Co-occurance (count-basedHannah Gill)\n",
+    "Co-occurence (count-based)\n",
     "- Pros: fast training, use stats\n",
     "- Cons: primarily to capture word similarity, some words can have large counts => disproportion in word importance\n",
     "\n",
     "Skipgram:\n",
-    "- Pros: improve performance (compared to co-occurance), and can capture complex patterns (not just similarity)\n",
+    "- Pros: improve performance (compared to co-occurence), and can capture complex patterns (not just similarity)\n",
     "- Cons: scales with corpus size (?) and don't use much stats"
    ]
   }
