--- a/fastai_1_stopwords_lemm_svd_nmf.ipynb
+++ b/fastai_1_stopwords_lemm_svd_nmf.ipynb
@@ -476,7 +476,7 @@
     }
    ],
    "source": [
-    "s[:4]"
+    "s[:4] # diagonal matrix showing important values in DESCENDING ORDER"
    ]
   },
   {
